--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: MelonSpace
 email: melonh0327@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Enjoy everyday
-baseurl: "/melonSpace/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://melonh.com" # the base hostname & protocol for your site
 github_username:  melonHuang
 
