--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: melonh0327@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Enjoy everyday
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://melonh.com" # the base hostname & protocol for your site
+url: "http://melonhuang.github.io/"
 github_username:  melonHuang
 
 # Build settings
